feat: 요구사항 4 구현